# rivulet

./: README.md
.github/ISSUE_TEMPLATE/: backlog.md
backend/: pyproject.toml
backend/rivulet/: __init__.py  api.py  main.py  services.py
backend/rivulet/static/: index.html  main.js
backend/tests/: test_main.py  test_rivulet.py
